--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../img/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./img/logo.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -20,7 +20,7 @@
     <nav>
         <ul class="topnav" id="dropdownclick">
             <a href="index.html">
-                <img class="logo" src="../img/logo.png">
+                <img class="logo" src="./img/logo.png">
             </a>
             <!-- <li class="topnav-right"><a href="index.html">Home</a></li>
             <li class="topnav-right"><a href="#about" data-id="about">About</a></li>
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-sm-5" data-aos="fade-right">
                 <div class="icon2">
-                    <img src="../img/woman2.png">
+                    <img src="./img/woman2.png">
                 </div>
             </div>
             <div class="col-sm-7">
@@ -88,7 +88,7 @@
                 <div class="col-sm-4 col-md-4">
                     <div class="box-event">
                         <div class="event">
-                            <img src="../img/tech it out.jpeg">
+                            <img src="./img/tech it out.jpeg">
                         </div>
                         <br>
                         <label class="eventlabel">TECH IT OUT</label>
@@ -97,7 +97,7 @@
                 <div class="col-sm-4 col-md-4">
                     <div class="box-event">
                         <div class="event">
-                            <img src="../img/Blogging Competition WIE.jpg">
+                            <img src="./img/Blogging Competition WIE.jpg">
                         </div>
                         <br>
                         <label class="eventlabel">BLOGGING CONTEST</label>
@@ -106,7 +106,7 @@
                 <div class="col-sm-4 col-md-4">
                     <div class="box-event">
                         <div class="event">
-                            <img src="../img/Zestia WIE.jpg">
+                            <img src="./img/Zestia WIE.jpg">
                         </div>
                         <br>
                         <label class="eventlabel">ZESTIA</label>
@@ -131,7 +131,7 @@
                 <div class="col-sm-4">
                     <div class="box-exe">
                         <div class="icon">
-                            <img src="../img/IRENE ANN ZACHARIAH _WIE Chair.jpg">
+                            <img src="./img/IRENE ANN ZACHARIAH _WIE Chair.jpg">
                         </div>
                         <label class="exelabel">CHAIR</label>
                         <p class="exe">
@@ -142,7 +142,7 @@
                 <div class="col-sm-4">
                     <div class="box-exe">
                         <div class="icon">
-                            <img src="../img/Sarayu Suresh_WIE Vice Chair.jpg">
+                            <img src="./img/Sarayu Suresh_WIE Vice Chair.jpg">
                         </div>
                         <label class="exelabel">VICE CHAIR</label>
                         <p class="exe">
@@ -153,7 +153,7 @@
                 <div class="col-sm-4">
                     <div class="box-exe">
                         <div class="icon">
-                            <img src="../img/Mufeetha O C_WIE Secretary-01.jpeg">
+                            <img src="./img/Mufeetha O C_WIE Secretary-01.jpeg">
                         </div>
                         <label class="exelabel">SECRETARY</label>
                         <p class="exe">
@@ -180,7 +180,7 @@
                     <label><i class="fa fa-address-card" aria-hidden="true"></i>&nbsp;Address</label>
                     <ul>
                         <li>RIT College of Engineering</li>
-                        <li>Pampady,Kottayam,Kerala-686502</li>
+                        <li>Pampady, Kottayam, Kerala 686502</li>
                         <li>Email: ieeeritsb@gmail.com</li>
                     </ul>
                 </div>
