--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script type="text/javascript" src="style.js"></script>
 </head>
 
 <body>
     <nav>
-        <ul class="topnav" id="dropdownclick">
+        <ul class="topnav fixed-top" id="dropdownclick">
             <a href="index.html">
                 <img class="logo" src="./img/logo.png">
             </a>
-            <!-- <li class="topnav-right"><a href="index.html">Home</a></li>
-            <li class="topnav-right"><a href="#about" data-id="about">About</a></li>
-            <li class="topnav-right"><a href="events.html">Events</a></li>
-            <li class="topnav-right"><a href="#execom" data-id="execom">Execom</a></li> -->
             <li class="topnav-right"><a href="#contact" data-id="contact">Contact</a></li>
             <li class="topnav-right"><a href="#execom" data-id="execom">Execom</a></li>
             <li class="topnav-right"><a href="#events" data-id="events">Events</a></li>
@@ -48,11 +45,6 @@
                     <div class="block-reveal" style="--bc: #c292c752; --d: .5s"><i>"Behind every successful woman is a tribe of other women who have her back"<br></i>
                     </div>
                 </h5>
-                <!-- <h3 class="quote">
-                    <i> 
-                        "Behind every successful woman is a tribe of other women who have her back"
-                    </i>
-                        </h3> -->
             </div>
         </div>
     </div>
@@ -198,17 +190,6 @@
             </div>
         </footer>
     </section>
-    <script>
-        function dropdownmenu() {
-            var x = document.getElementById("dropdownclick");
-            if (x.className == "topnav") {
-                x.className += " responsive";
-                //change topnav to topnav.responsive
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script>
         AOS.init();
