--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./img/logo.png" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script type="text/javascript" src="style.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -173,7 +173,6 @@
                     <ul>
                         <li>RIT College of Engineering</li>
                         <li>Pampady, Kottayam, Kerala 686502</li>
-                        <li>Email: ieeeritsb@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -185,7 +184,7 @@
                     <a href="https://www.linkedin.com/in/ieeesbrit/ "><i class="fa fa-linkedin fa-2x " style="color:black "></i></a>&nbsp;&nbsp;
                     <a href="https://twitter.com/ieeesbrit "><i class="fa fa-twitter fa-2x " style="color:black "></i></a>
                     <br><br>
-                    <p class="owner">Designed and developed by Sarayu Suresh <span>&#169;</span></p>
+                    <p class="owner">Designed and developed by <br>Sarayu Suresh <span>&#169;</span></p>
                 </div>
             </div>
         </footer>
