--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Patua+One&display=swap');
     </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
